--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,31 @@
-.tabs dd.active a {
-	background: #f0f
+body {
+	background: #333;
+}
 
-	-webkit-transition: background .5s;
+.tabs dd {
+	width: 33.3%;
+}
+
+
+ {
+	background: #f0f;
+
 	transition: background .5s;
+}
+
+
+.pauseimage {
+	width: 50%;
+	margin: auto;
+	margin-top: 30px;
+}
+
+.playimage {
+	width: 50%;
+	margin: auto;
+	margin-top: 30px;
+}
+
+.offscreenimg {
+	text-indent: -9999px;
 }
