--- a/css/styles.css
+++ b/css/styles.css
@@ -2,30 +2,33 @@ body {
 	background: #333;
 }
 
-.tabs dd {
-	width: 33.3%;
-}
-
-
- {
-	background: #f0f;
-
-	transition: background .5s;
-}
-
 
 .pauseimage {
-	width: 50%;
+	width: 70%;
 	margin: auto;
 	margin-top: 30px;
 }
 
-.playimage {
-	width: 50%;
-	margin: auto;
-	margin-top: 30px;
+
+.search {
+	margin: 30px 0 150px;
 }
 
-.offscreenimg {
-	text-indent: -9999px;
+.button.alert {
+	width: 100%;
+	margin: auto;
+}
+
+.list {
+	width: 100%;
+}
+
+.slide {
+	color: #fff;
+	margin-top: 40px;
+}
+
+.button-group {
+	margin-top: 30px;
+	margin-left: 80px;
 }
